test/TestPhases/typechecker/invalid/ReturnMissing.blc
module

function calc() returns int64
    if true then
        
    else
        return -1
    end
end

activity main ()()
    let x = calc()
    await false
end
